# tessera

./: .db.env.example  .dockerignore  .gitignore  .tool-versions  404.html  CNAME  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  docker-compose.build.yaml  docker-compose.yaml  index.html  markdown-page.html  rustfmt.toml  sitemap.xml
crates/nebula-abe/: Cargo.toml
crates/nebula-abe-wasm/: Cargo.toml
crates/nebula-abe-wasm/src/: lib.rs
crates/nebula-abe-wasm/web/: package.json
crates/nebula-abe-wasm/web/src/: index.js
crates/nebula-abe/src/: error.rs  lib.rs
crates/nebula-abe/src/curves/: bls24479.rs  bls48556.rs  bn462.rs  miracl.rs  mod.rs
crates/nebula-abe/src/random/: miracl.rs  mod.rs
crates/nebula-abe/src/schemes/: isabella24.rs  mod.rs  rw15.rs
crates/nebula-abe/src/utils/: aes.rs  secret_shares.rs
crates/nebula-authority/: Cargo.toml  Dockerfile
crates/nebula-authority/src/: application.rs  config.rs  database.rs  main.rs
crates/nebula-authority/src/domain/: authority.rs  backbone.rs  key_pair.rs
crates/nebula-authority/src/server/: mod.rs
crates/nebula-authority/src/server/router/: mod.rs
crates/nebula-authority/static/: default_config.toml
crates/nebula-authorization/: Cargo.toml  Dockerfile
crates/nebula-authorization/src/: application.rs  config.rs  logger.rs  main.rs
crates/nebula-authorization/src/database/: machine_identity.rs  machine_identity_attribute.rs  machine_identity_token.rs  mod.rs  types.rs
crates/nebula-authorization/src/database/workspace_migration/: m20241128_001_init_authorization.rs  mod.rs
crates/nebula-authorization/src/domain/: mod.rs
crates/nebula-authorization/src/domain/connector/: mod.rs  saml.rs
crates/nebula-authorization/src/domain/machine_identity/: mod.rs
crates/nebula-authorization/src/server/: mod.rs
crates/nebula-backbone/: Cargo.toml  Dockerfile
crates/nebula-backbone/src/: config.rs
crates/nebula-backbone/src/application/: mod.rs
crates/nebula-backbone/src/database/: applied_path_policy.rs  applied_path_policy_allowed_action.rs  applied_policy.rs  authority.rs  mod.rs  path.rs  policy.rs  secret_value.rs  workspace.rs
crates/nebula-backbone/src/domain/: mod.rs
crates/nebula-backbone/src/server/: mod.rs
crates/nebula-cli/: Cargo.toml
crates/nebula-cli/src/: main.rs
crates/nebula-cli/src/api/: authority.rs  authorization.rs  backbone.rs  mod.rs
crates/nebula-cli/src/command/: access_condition.rs  auth.rs  authority.rs  config.rs  login.rs  mod.rs  path.rs  secret.rs
crates/nebula-cli/src/config/: mod.rs
crates/nebula-cli/src/utils/: validation.rs
crates/nebula-config-path/: Cargo.toml
crates/nebula-config-path/src/: lib.rs
crates/nebula-idp/: Cargo.toml
crates/nebula-idp/src/: application.rs  config.rs
crates/nebula-idp/src/domain/: auth_provider.rs  mod.rs
crates/nebula-idp/src/server/: mod.rs
crates/nebula-miracl/: Cargo.toml
crates/nebula-miracl/src/: gcm.rs  hash384.rs  lib.rs  rand.rs  x509.rs
crates/nebula-miracl/src/bls24479/: big.rs  ecp.rs  ecp4.rs  fp.rs  fp2.rs  fp24.rs  fp4.rs  fp8.rs  mpin192.rs  pair4.rs  rom.rs
crates/nebula-miracl/src/bls48556/: big.rs  ecp.rs  ecp8.rs  eddsa.rs  fp.rs  fp16.rs  fp2.rs  fp4.rs  fp48.rs  fp8.rs  hpke.rs  pair8.rs  rom.rs
crates/nebula-miracl/src/bls48581/: big.rs  bls256.rs  ecp.rs  ecp8.rs  eddsa.rs  fp2.rs  fp4.rs  fp48.rs  mpin256.rs
crates/nebula-miracl/src/bn462/: big.rs  ecdh.rs  ecp.rs  ecp2.rs  eddsa.rs  fp.rs  fp12.rs  fp2.rs  fp4.rs  hpke.rs  pair.rs  rom.rs
crates/nebula-policy/: Cargo.toml
crates/nebula-policy/src/: error.rs  human.policy.pest  utils.rs
crates/nebula-policy/src/pest/: human.rs
crates/nebula-secret-sharing/: Cargo.toml
crates/nebula-secret-sharing/src/: gf256.rs  shamir.rs
crates/nebula-storage/: Cargo.toml
crates/nebula-storage/src/: lib.rs
crates/nebula-storage/src/backend/: postgres.rs
crates/nebula-storage/src/shield/: aes.rs  mod.rs
crates/nebula-token/: Cargo.toml
crates/nebula-token/src/: claim.rs  error.rs  jwt.rs  lib.rs
crates/nebula-token/src/auth/: error.rs  extractor.rs  jwks_discovery.rs  layer.rs  mod.rs  service.rs
crates/nebula-token/src/jwk/: jwk_ext.rs  jwk_set.rs  mod.rs
crates/tessera-abe/: Cargo.toml
crates/tessera-abe-wasm/: Cargo.toml
crates/tessera-abe-wasm/src/: lib.rs
crates/tessera-abe-wasm/web/: package.json  webpack.config.js
crates/tessera-abe-wasm/web/src/: index.js
crates/tessera-abe/src/: error.rs  lib.rs  main.rs
crates/tessera-abe/src/curves/: bls24479.rs  bls48556.rs  bn462.rs  mod.rs
crates/tessera-abe/src/random/: miracl.rs
crates/tessera-abe/src/schemes/: isabella24.rs  mod.rs  rw15.rs
crates/tessera-abe/src/utils/: aes.rs  attribute.rs  mod.rs  secret_shares.rs  tools.rs
crates/tessera-authority/: Cargo.toml
crates/tessera-authority/src/: application.rs  config.rs  main.rs  server.rs
crates/tessera-authority/src/domain/: application.rs  authority.rs  backbone.rs  key_pair.rs  mod.rs
crates/tessera-authority/src/server/: mod.rs
crates/tessera-authority/static/: default_config.toml
crates/tessera-backbone/: Cargo.toml  Dockerfile
crates/tessera-backbone/src/: application.rs  config.rs  database.rs  logger.rs  main.rs  server.rs
crates/tessera-backbone/src/application/: mod.rs
crates/tessera-backbone/src/database/: applied_policy.rs  mod.rs  parameter.rs  path.rs  secret_metadata.rs  vault.rs
crates/tessera-backbone/src/domain/: mod.rs
crates/tessera-backbone/src/server/: mod.rs  response.rs
crates/tessera-policy/: Cargo.toml
crates/tessera-policy/src/: error.rs  json.policy.pest  lib.rs  msp.rs  utils.rs
crates/tessera-policy/src/pest/: human.rs  json.rs  mod.rs
crates/tessera-secret-sharing/: Cargo.toml
crates/tessera-secret-sharing/src/: gf256.rs  lib.rs  shamir.rs
crates/tessera-storage/: Cargo.toml
crates/tessera-storage/src/: errors.rs  lib.rs
crates/tessera-storage/src/backend/: file.rs  mod.rs  postgres.rs
crates/tessera-storage/src/protector/: aes_gcm.rs  mod.rs
crates/tessera-storage/src/shield/: aes.rs  aes_gcm.rs  mod.rs
(+467 files in other folders)
