[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["John Choi <john@cremit.io>"]
repository = "https://github.com/cremithq/tessera"
keywords = ["secret", "vault"]
categories = ["security"]

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1
lto = true

[profile.dev]
strip = "debuginfo"

[profile.dev.package."*"]
opt-level = 0

[workspace.dependencies]
rand = "0.8"
anyhow = "1.0"
async-trait = "0.1"
tokio = "1.40"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
zeroize = "1.8.1"
tessera-miracl = { path = "crates/tessera-miracl" }
tessera-policy = { path = "crates/tessera-policy" }
tessera-abe = { path = "crates/tessera-abe" }
tessera-storage = { path = "crates/tessera-storage" }
tessera-secret-sharing = { path = "crates/tessera-secret-sharing" }
sea-orm = { version = "1.1", features = [
    "runtime-tokio-native-tls",
    "sqlx-postgres",
] }
aws-config = "1.5.8"
aws-credential-types = "1.2.1"
aws-sigv4 = "1.2.4"
ulid = "1.1.3"
url = "2.5.2"
urlencoding = "2.1.3"
chrono = { version = "0.4.38" }
aes-gcm = "0.10"
lazy_static = "1.5"
once_cell = "1.20"
mockall = "0.13.0"
rstest = "0.23.0"
regex = "1.1.0"
rmp-serde = "1.3"
reqwest = "0.12.8"
base64 = "0.22"
sqlx = "0.8"
derive_builder = "0.20"
