[package]
name = "nebula-abe"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
rand_core = "0.6"
sha3 = { workspace = true }
aes-gcm = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
zeroize = { workspace = true, optional = true }
nebula-miracl = { workspace = true }
nebula-policy = { workspace = true }
thiserror = { workspace = true }
lazy_static = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
rand = { workspace = true }
rstest = { workspace = true }

[features]
zeroize = ["dep:zeroize", "nebula-miracl/zeroize"]
