[package]
name = "nebula-authority"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
directories = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
zeroize = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
rmp-serde = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
thiserror = { workspace = true }
axum_thiserror = { workspace = true }
base64 = { workspace = true }
url = { workspace = true, features = ["serde"] }
cached = { version = "0.54", features = [
    "async",
    "async_tokio_rt_multi_thread",
] }
# nebula packages
nebula-abe = { workspace = true, features = ["zeroize"] }
nebula-storage = { workspace = true, features = ["zeroize", "shield"] }
nebula-secret-sharing = { workspace = true }
nebula-token = { workspace = true }
