[package]
name = "nebula-authority"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
zeroize = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
rmp-serde = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
thiserror = { workspace = true }
axum_thiserror = { workspace = true }
base64 = { workspace = true }
url = { workspace = true, features = ["serde"] }
cached = { workspace = true }
sea-orm = { workspace = true, features = ["mock"] }
aws-config = { workspace = true }
aws-credential-types = { workspace = true }
aws-sigv4 = { workspace = true }
urlencoding = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
# nebula packages
nebula-abe = { workspace = true, features = ["zeroize"] }
nebula-storage = { workspace = true, features = ["zeroize", "shield"] }
nebula-secret-sharing = { workspace = true }
nebula-token = { workspace = true }
nebula-config-path = { workspace = true }
