[package]
name = "nebula-authorization"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
axum_thiserror = { workspace = true }
thiserror = { workspace = true }
validator.workspace = true
async-trait = { workspace = true }
samael = { version = "0.0.17", features = ["xmlsec"] }
base64 = { workspace = true }
bon = { workspace = true }
openssl = { workspace = true }
serde_json = { workspace = true }
time = "0.3"
url = { workspace = true, features = ["serde"] }
rand = { workspace = true }
sha3 = { workspace = true }
sea-orm = { workspace = true, features = ["mock"] }
aws-config = { workspace = true }
aws-credential-types = { workspace = true }
aws-sigv4 = { workspace = true }
ulid = { workspace = true, features = ["serde"] }
urlencoding = { workspace = true }
chrono = { workspace = true }
nebula-token = { workspace = true }
sea-orm-migration.workspace = true
futures-util.workspace = true
tower-http = { workspace = true, features = ["cors"] }
nebula-config-path = { workspace = true }
