[package]
name = "nebula-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true, features = ["derive"] }
directories = { workspace = true }
thiserror = { workspace = true }
validator.workspace = true
async-trait = { workspace = true }
iocraft = "0.4"
clap = { workspace = true, features = ["cargo", "env", "derive"] }
reqwest = { workspace = true, features = ["json"] }
