[package]
name = "nebula-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
validator.workspace = true
async-trait = { workspace = true }
clap = { workspace = true, features = ["cargo", "env", "derive"] }
reqwest = { workspace = true, features = ["json"] }
config = { workspace = true }
url = { workspace = true, features = ["serde"] }
toml = "0.8"
smol = "2"
inquire = "0.7.5"
# nebula crates
nebula-config-path = { workspace = true }
