[package]
name = "nebula-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
validator.workspace = true
async-trait = { workspace = true }
clap = { workspace = true, features = ["cargo", "env", "derive"] }
reqwest = { workspace = true, features = ["json"] }
config = { workspace = true }
url = { workspace = true, features = ["serde"] }
toml = "0.8"
tokio = { workspace = true, features = ["full"] }
inquire = "0.7.5"
crossterm = "0.27"
ulid = { workspace = true, features = ["serde"] }
comfy-table = "7.1.3"
futures-util = { workspace = true }
cached = { workspace = true, features = ["disk_store", "rmp-serde"] }
rmp-serde = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
# nebula crates
nebula-config-path = { workspace = true }
nebula-abe = { workspace = true }
