[package]
name = "nebula-miracl"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
serde = { workspace = true, features = ["derive"], optional = true }
zeroize = { workspace = true, optional = true }

[features]
std = []
default = ["serde"]
serde = ["dep:serde"]
zeroize = ["dep:zeroize"]
