[package]
name = "nebula-policy"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
pest.workspace = true
pest_derive.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
