[package]
name = "nebula-token"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
directories = { workspace = true }
thiserror = { workspace = true }
validator.workspace = true
async-trait = { workspace = true }
josekit = "0.10"
base64 = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
bon = { workspace = true }
tower = "0.5"
url = { workspace = true }
futures-util = { workspace = true }
axum_thiserror = { workspace = true }
