[package]
name = "tessera-abe"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
aes-gcm = "0.10"
sha3 = "0.10"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
zeroize = { workspace = true, features = ["zeroize_derive", "serde"] }
tessera-miracl = { workspace = true }
tessera-policy = { workspace = true }
lazy_static = "1.5.0"

[dev-dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
rand = { workspace = true }
