[package]
name = "tessera-abe"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
sha3 = "0.10"
rand_core = "0.6"
aes-gcm = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
zeroize = { workspace = true, features = ["zeroize_derive", "serde"] }
tessera-miracl = { workspace = true }
tessera-policy = { workspace = true }
thiserror = { workspace = true }
lazy_static = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
rand = { workspace = true }
rstest = { workspace = true }
