[package]
name = "tessera-authority"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4.5.19", features = ["cargo", "derive"] }
axum = "0.7.7"
config = "0.14.0"
directories = "5.0"
serde = { workspace = true }
tessera-abe = { workspace = true }
tessera-storage = { workspace = true }
tessera-secret-sharing = { workspace = true }
zeroize = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
bincode = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
thiserror = { workspace = true }
axum_thiserror = "0.1"
base64 = { workspace = true }
