[package]
name = "tessera-backbone"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
tokio = { workspace = true, features = [ "full" ] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["json"] }
clap = { version = "4.5.19", features = ["cargo", "derive"] }
