[package]
name = "tessera-backbone"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
tokio = { workspace = true, features = [ "full" ] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4.5.19", features = ["cargo", "derive"] }
axum = { version = "0.7.7", features = ["macros"] }
xdg = "2.5.2"
config = "0.14.0"
serde = { workspace = true }
sea-orm = { workspace = true }
aws-config = { workspace = true }
aws-credential-types = { workspace = true }
aws-sigv4 = { workspace = true }
ulid = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
