[package]
name = "tessera-policy"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
permutation = "0.4.1"
pest = "2.7.10"
pest_derive = "2.7.10"
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
