[package]
name = "tessera-secret-sharing"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
zeroize.workspace = true
tokio.workspace = true
thiserror.workspace = true
rand.workspace = true

[dev-dependencies]
