[package]
name = "tessera-storage"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
zeroize = { workspace = true, features = ["zeroize_derive", "serde"] }
openssl = "0.10.66"
rand = "0.8.5"
