[package]
name = "tessera-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
aes-gcm.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
trait-variant = "0.1.2"
zeroize.workspace = true
tokio.workspace = true
thiserror.workspace = true
rand.workspace = true
rmp-serde.workspace = true

[dev-dependencies]
